--- a/src/music_player/progress_bar/ProgressBar.css
+++ b/src/music_player/progress_bar/ProgressBar.css
@@ -9,8 +9,10 @@
 }
 
 .progress-label{
- padding-left: 0.5em;
- padding-right: 0.5em;   
+    padding-left: 0.5em;
+    padding-right: 0.5em;
+    color: #9d9d9d;   
+    font-size: 0.85em;
 }
 
 /*For the seek bar*/
@@ -19,12 +21,13 @@
  */
  .progress{
     margin: 0;
+    margin-top: 4px;
     padding: 0;
-    width: 800px;
-    height: 8px;
-    border: 1px solid #ddd;
+    width: 100%;
+    height: 4px;
     position: relative;
     cursor: pointer;
+    background-color: #404040;
     border-radius: 1.1em;
 }
 
@@ -40,11 +43,12 @@
  * Seekber Circle Button
  */
 .progress_btn{
-    margin: -5px 0 0 -5px;
-    height: 18px;
-    width: 18px;
-    background: #ccc;    
+    margin: -4px 0 0 -2px;
+    height: 12px;
+    width: 12px;
+    background: #ffffff;    
     z-index: 2;
+    display: none;
 }
 
 .progress_btn:hover,
@@ -57,7 +61,15 @@
  */
 .progress_bg{
     margin: 0;
-    background: #eee;
+    background-color: #8f8f8f;
     height: 100%;
     z-index: 1;
+}
+
+.progress:hover >.progress_bg{
+    background-color: #60bb56;
+}
+
+.progress:hover >.progress_btn{
+    display: inline;
 }
